--- a/configs/template_config.yaml
+++ b/configs/template_config.yaml
@@ -5,6 +5,11 @@ local:
   output_handle: false # indicate if you would like to include handles in the timeline results
   skip_column: skip # name of column containing skip indicators (1's indicating handles to be skipped)
   use_skip: false # indicate if you would like to use the skip column to filter handles
+  # Tweet query config
+  query: '<query string>' # Query string used to search for tweets in the query subcommand
+  max_query_response: 500 # Maximum number of tweets to query (Must be at least 10, )
+  start_time: '' # Earliest time of query results, must be in format YYYY-MM-DDTHH:mm:ssZ (ex. 2016-06-23T09:07:21-07:00, Z=timezone)
+  end_time: '' # Latest time of query results. See above format. Query searches most recent/starting from end_time. Default is now-30s
 twitter:
   account:
     bearer_token: '<your twitter api bearer token>'
